[package]
name = "chunk_contextor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
async-trait = "0.1.80"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3.30"
urlencoding = "2.1.3"
csv = "1.3.0"
pdf-extract = { version = "0.7.8", optional = true  }
langchain-rust = { version = "4.6.0", features = ["ollama", "pdf-extract", "qdrant"] }
tokio = { version = "1", features = ["full"] }
htmd = { version = "0.1", optional = true }
log = "0.4.26"
env_logger = "0.11.7"
text-splitter = { version = "0.24.1", features = ["tiktoken-rs"] }
tiktoken-rs = "0.6.0"
clap = { version = "4.5.32", features = ["derive"] }
